# fifteen

./: .gitignore  4x4_01_0001_bfs_rdul_stats.txt  Cargo.toml  LICENSE  fifteen  test
board/src/: lib.rs
checker/: Cargo.toml
checker/src/: lib.rs
generator/: Cargo.toml
generator/src/: lib.rs
solver/: Cargo.toml
solver/src/: astar.rs  bfs.rs  dfs.rs  lib.rs
src/: main.rs
